<resources>
    <string name="app_name">LayoutProject_jdimaggio</string>
    <string name="smiley">smiley</string>
    <string name="this_is_my_layout_project">This is my layout project</string>
    <string name="button1">Button1</string>
    <string name="button2">Button2</string>
    <string name="button3">Button3</string>
    <string name="checkbox1">CheckBox1</string>
    <string name="checkbox2">CheckBox2</string>
    <string name="checkbox3">CheckBox3</string>
    <string name="checkbox4">CheckBox4</string>
    <string name="checkbox5">CheckBox5</string>
    <string name="checkbox6">CheckBox6</string>
</resources>